Fix for horizontal overflow

--- a/_scss/global/_global.scss
+++ b/_scss/global/_global.scss
@@ -65,12 +65,12 @@ body {
 
       @keyframes background-wobble-1 {
         from {
-          width: 320px;
-          height: 320px;
+          width: 95vw;
+          height: 95vw;
         }
         to {
-          width: 440px;
-          height: 440px;
+          width: 100vw;
+          height: 150vw;
         }
       }
     }
@@ -99,12 +99,12 @@ body {
 
       @keyframes background-wobble-2 {
         from {
-          width: 150px;
-          height: 150px;
+          width: 120px;
+          height: 120px;
         }
         to {
-          width: 200px;
-          height: 200px;
+          width: 180px;
+          height: 180px;
         }
       }
     }
